--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,9 @@
-pool: Default
+trigger:
+- main
+pool: 
+  name: Default
+variables:
+  buildConfig: 'Release'
 steps:
-- bash: echo hello world
+- script: dotnet build --configuration $(buildConfig)
+  displayName: 'dotnet build $(buildConfig)'
