--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,40 @@
 trigger:
-- main
+- '*'
 pool: 
   name: Default
 variables:
   buildConfig: 'Release'
 steps:
-- script: dotnet build --configuration $(buildConfig)
-  displayName: 'dotnet build $(buildConfig)'
+- task: UseDotNet@2
+  displayName: 'Use .NET SDK 6.X'
+  inputs:
+    packageType: sdk
+    version: '6.X'
+
+- task: Npm@1
+  displayName: 'Run npm install'
+  inputs:
+    verbose: false
+
+- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+  displayName: 'Compile Sass assets'
+
+- task: gulp@1
+  displayName: 'Run gulp Tasks'
+
+- script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+  displayName: 'Write build info'
+  workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+
+- task: DotNetCoreCLI@2
+  displayName: 'Restore project dependencies'
+  inputs:
+    command: 'restore'
+    projects: '**/*.csproj'
+
+-task: DotNetCoreCLI@2
+ displayName: 'Build the project -Release'
+ inputs:
+  command: 'build'
+  arguments: '--no-restore --configuration Release'
+  projects: '**/*.csproj'
