--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ steps:
 
 - task: gulp@1
   displayName: 'Run gulp Tasks'
+  inputs:
+    gulpFile: 'gulpfile.js'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
