--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,10 @@ steps:
 - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
-- task: gulp@1
-  displayName: 'Run gulp Tasks'
-  inputs:
-    gulpFile: 'gulpfile.js'
+#- task: gulp@1
+ # displayName: 'Run gulp Tasks'
+  #inputs:
+   # gulpFile: 'gulpfile.js'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
