--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,24 +4,27 @@ pool:
   name: Default
 variables:
   buildConfig: 'Release'
+  wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
+  sdkVersion: '6.x'
+  nodeVersion: '18.x'
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET SDK 6.X'
+  displayName: 'Use .NET SDK $(sdkVersion)'
   inputs:
     packageType: sdk
-    version: '6.x'
+    version: '$(sdkVersion)'
 - task: NodeTool@0
   inputs:
     versionSource: 'spec'
-    versionSpec: '18.x'
+    versionSpec: '$(nodeVersion)'
   displayName: 'Install Node.js'
 
 - task: Npm@1
-  displayName: 'Run npm install with node v18.16.0'
+  displayName: 'Run npm install with node $(nodeVersion)'
   inputs:
     verbose: false
 
-- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+- script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
   displayName: 'Compile Sass assets'
 
 #- task: gulp@1
@@ -31,7 +34,7 @@ steps:
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
-  workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+  workingDirectory: $(wwwrootDir)
 
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
@@ -40,19 +43,19 @@ steps:
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Build the project -Release'
+  displayName: 'Build the project -$(buildConfig)'
   inputs:
    command: 'build'
-   arguments: '--no-restore --configuration Release'
+   arguments: '--no-restore --configuration $(buildConfig)'
    projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Publish the project - Release'
+  displayName: 'Publish the project - $(buildConfig)'
   inputs:
     command: 'publish'
     project: '**/*.csproj'
     publishWebProjects: false
-    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+    arguments: '--no-build --configuration $(buildConfig) --output $(Build.ArtifactStagingDirectory)/$(buildConfig)'
     zipAfterPublish: true
 
 - task: PublishBuildArtifacts@1
