--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,11 @@ steps:
   inputs:
     versionSpec: '5.9.1'
 
+- task: NodeTool@0
+  inputs:
+    versionSource: 'spec' # 'spec' | 'fromFile'. Required. Source of version. Default: spec.
+    versionSpec: '18.x' 
+
 - task: Npm@1
   displayName: 'Run npm install'
   inputs:
@@ -29,8 +34,8 @@ steps:
 - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
   displayName: 'Compile Sass assets'
 
-- task: gulp@1
-  displayName: 'Run gulp tasks'
+#- task: gulp@1
+ # displayName: 'Run gulp tasks'
 
 - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
